changed a bunch of whitespace back into tabs, and fixed issue where categories without a parentCid were not showing up at all in the ACP

--- a/public/less/admin/manage/categories.less
+++ b/public/less/admin/manage/categories.less
@@ -11,7 +11,9 @@ div.categories {
     }
   }
 
-  .fa-ul {
+  .stats {
+    display: inline-block;
+
     li {
       min-height: 0;
       display: inline;
@@ -65,9 +67,5 @@ div.categories {
 
   .description {
     margin: 0;
-  }
-
-  .stats, .btn-group {
-    float: left;
   }
 }
